auth & task file update

--- a/project/Taskfile.yml
+++ b/project/Taskfile.yml
@@ -5,6 +5,7 @@ silent: true
 env:
   FRONT_END_BINARY: "frontApp"
   BROKER_BINARY: "brokerApp"
+  AUTH_BINARY: "authApp"
 
 tasks:
   # up: starts all containers in the background without forcing build
@@ -16,7 +17,7 @@ tasks:
 
   # up_build: stops docker-compose (if running), builds all projects and starts docker compose
   up_build:
-    deps: [build_broker]
+    deps: [build_broker, build_auth]
     cmds:
       - echo "Stopping docker images (if running...)"
       - docker-compose down
@@ -36,6 +37,13 @@ tasks:
     cmds:
       - echo "Building broker binary..."
       - cd ../broker-service && GOARCH=amd64 GOOS=linux CGO_ENABLED=0 go build -o {{.BROKER_BINARY}} ./cmd/api/
+      - echo "Done!"
+
+  # build_auth: builds the broker binary as a linux executable
+  build_auth:
+    cmds:
+      - echo "Building broker binary..."
+      - cd ../authentication-service && GOARCH=amd64 GOOS=linux CGO_ENABLED=0 go build -o {{.AUTH_BINARY}} ./cmd/api/
       - echo "Done!"
 
   # build_front: builds the front end binary
